[Mac] Fullscreen Toolbar Fixes

- Increased the mouse threshold to hide the toolbar
-The toolbar will now hide when the mouse is over 50px below it

- In FullscreenMenubarTracker, the toolbar layout and menubarFraction
 needs to be updated before the tracker attempt to animate the toolbar
 out.

BUG=692275

Review-Url: https://codereview.chromium.org/2875673004
Cr-Commit-Position: refs/heads/master@{#471016}

Former-commit-id: 50aafec7a5ed2822f6dd50acfd2c2c4a79e01fce